--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,10 @@
 			<version>1.6.0.Beta1</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
