--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,17 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 
+#Email Configuration
+# Mailgun SMTP configuration
+spring.mail.host=smtp.mailgun.org
+spring.mail.port=587
+spring.mail.username=postmaster@sandboxceef689d514a4d4dac065582c418e06c.mailgun.org
+spring.mail.password=143e259942aac8b9a6c953da65502ff4-da554c25-1a1f5691
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
+
+
 
 
