--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,9 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-
+#Ignore configuration files
+application.properties
+.env
 
 ### STS ###
 .apt_generated
